--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/12/2020 01:29:00 PM</p>
+    <p class="lastupdate">09/12/2020 01:34:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">91.5&#176;F</td>
+        <td class="data">91.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">91.5&#176;F</td>
+        <td class="data">91.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">91.5&#176;F</td>
+        <td class="data">91.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">40.5&#176;F</td>
+        <td class="data">37.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">17%</td>
+        <td class="data">15%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.877 inHg (-0.081)</td>
+        <td class="data">29.875 inHg (-0.083)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph ESE (112&#176;)</td>
+        <td class="data">6 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:29:00 PM">
-            91.5</span><br/>
+          <span title="01:31:24 PM">
+            91.8</span><br/>
           <span title="07:15:43 AM">
             45.6</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="01:29:00 PM" class="hival">
-            91.5</span>
+          <span title="01:31:24 PM" class="hival">
+            91.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -237,20 +237,20 @@
         <td class="data new_row hilo_day">
           <span title="01:01:40 PM">
             50.3</span><br/>
-          <span title="01:24:00 PM">
-            39.7</span>
+          <span title="01:33:46 PM">
+            37.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:23:38 AM (Monday)">
             58.4</span><br/>
-          <span title="08:45:00 PM (Friday)">
-            39.6</span>
+          <span title="01:33:46 PM (Saturday)">
+            37.4</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 01:24:38 PM">
             59.6</span><br/>
-          <span title="09/11/2020 08:45:00 PM">
-            39.6</span>
+          <span title="09/12/2020 01:33:46 PM">
+            37.4</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/14/2020 10:10:13 AM">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="05:42:45 AM">
             86</span><br/>
-          <span title="01:24:00 PM">
-            17</span>
+          <span title="01:33:24 PM">
+            15</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:04:49 AM (Friday)">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:16:01 AM">
             29.972</span><br/>
-          <span title="01:26:02 PM">
-            29.876</span>
+          <span title="01:32:02 PM">
+            29.873</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:56:01 AM (Friday)">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="12:28:00 PM">
-            5</span><br/>
-          158
+          <span title="01:33:08 PM">
+            9</span><br/>
+          211
         </td>
         <td class="data new_row hilo_week">
           <span title="03:36:26 PM (Wednesday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          125
+          130
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">10 days, 22 hours, 42 minutes</td>
+      <td class="data">10 days, 22 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">10 days, 22 hours, 42 minutes</td>
+      <td class="data">10 days, 22 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
