--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/12/2020 01:44:00 PM</p>
+    <p class="lastupdate">09/12/2020 01:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">91.0&#176;F</td>
+        <td class="data">91.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">91.0&#176;F</td>
+        <td class="data">91.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">91.0&#176;F</td>
+        <td class="data">91.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">36.9&#176;F</td>
+        <td class="data">37.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.865 inHg (-0.094)</td>
+        <td class="data">29.862 inHg (-0.092)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">5 mph SW (225&#176;)</td>
+        <td class="data">5 mph WSW (248&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -90,7 +90,7 @@
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">41%</td>
+        <td class="data">40%</td>
       </tr>
     </tbody>
   </table>
@@ -237,20 +237,20 @@
         <td class="data new_row hilo_day">
           <span title="01:01:40 PM">
             50.3</span><br/>
-          <span title="01:43:38 PM">
-            36.9</span>
+          <span title="01:45:04 PM">
+            35.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:23:38 AM (Monday)">
             58.4</span><br/>
-          <span title="01:43:38 PM (Saturday)">
-            36.9</span>
+          <span title="01:45:04 PM (Saturday)">
+            35.1</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 01:24:38 PM">
             59.6</span><br/>
-          <span title="09/12/2020 01:43:38 PM">
-            36.9</span>
+          <span title="09/12/2020 01:45:04 PM">
+            35.1</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/14/2020 10:10:13 AM">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="05:42:45 AM">
             86</span><br/>
-          <span title="01:33:24 PM">
-            15</span>
+          <span title="01:44:30 PM">
+            14</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:04:49 AM (Friday)">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:16:01 AM">
             29.972</span><br/>
-          <span title="01:43:02 PM">
-            29.865</span>
+          <span title="01:47:02 PM">
+            29.862</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:56:01 AM (Friday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          138
+          145
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          343
+          342
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -507,8 +507,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             43</span><br/>
-          <span title="09:01:01 AM">
-            41</span>
+          <span title="01:48:02 PM">
+            40</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:57:01 AM (Wednesday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">10 days, 22 hours, 57 minutes</td>
+      <td class="data">10 days, 23 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">10 days, 22 hours, 57 minutes</td>
+      <td class="data">10 days, 23 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
