--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/12/2020 02:14:00 PM</p>
+    <p class="lastupdate">09/12/2020 02:19:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">92.6&#176;F</td>
+        <td class="data">92.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">92.6&#176;F</td>
+        <td class="data">92.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">92.6&#176;F</td>
+        <td class="data">92.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">34.6&#176;F</td>
+        <td class="data">30.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">13%</td>
+        <td class="data">11%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.851 inHg (-0.092)</td>
+        <td class="data">29.854 inHg (-0.083)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph SSW (202&#176;)</td>
+        <td class="data">5 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">73.4&#176;F</td>
+        <td class="data">73.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">39%</td>
+        <td class="data">38%</td>
       </tr>
     </tbody>
   </table>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:13:56 PM">
-            92.6</span><br/>
+          <span title="02:17:20 PM">
+            92.9</span><br/>
           <span title="07:15:43 AM">
             45.6</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:13:56 PM" class="hival">
-            92.6</span>
+          <span title="02:17:20 PM" class="hival">
+            92.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -237,20 +237,20 @@
         <td class="data new_row hilo_day">
           <span title="01:01:40 PM">
             50.3</span><br/>
-          <span title="02:06:42 PM">
-            31.8</span>
+          <span title="02:18:12 PM">
+            30.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:23:38 AM (Monday)">
             58.4</span><br/>
-          <span title="02:06:42 PM (Saturday)">
-            31.8</span>
+          <span title="02:18:12 PM (Saturday)">
+            30.6</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 01:24:38 PM">
             59.6</span><br/>
-          <span title="09/12/2020 02:06:42 PM">
-            31.8</span>
+          <span title="09/12/2020 02:18:12 PM">
+            30.6</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/14/2020 10:10:13 AM">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="05:42:45 AM">
             86</span><br/>
-          <span title="02:06:42 PM">
-            12</span>
+          <span title="02:17:48 PM">
+            11</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:04:49 AM (Friday)">
@@ -407,7 +407,7 @@
       <tr>
         <td class="label">Wind Average</td>
         <td class="data new_row hilo_day">
-          0</td>
+          1</td>
         <td class="data new_row hilo_week">
           1</td>
         <td class="data new_row hilo_month">
@@ -444,11 +444,11 @@
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          228
+          227
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          342
+          341
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:11:02 PM">
-            73.4</span><br/>
+          <span title="02:18:02 PM">
+            73.5</span><br/>
           <span title="07:26:01 AM">
             69.3</span>
         </td>
@@ -507,8 +507,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             43</span><br/>
-          <span title="02:02:02 PM">
-            39</span>
+          <span title="02:14:02 PM">
+            38</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:57:01 AM (Wednesday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">10 days, 23 hours, 27 minutes</td>
+      <td class="data">10 days, 23 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">10 days, 23 hours, 27 minutes</td>
+      <td class="data">10 days, 23 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
